dnl Process this file with autoconf to produce a configure script.
AC_INIT(callbacks.c)

AM_INIT_AUTOMAKE(monitor_products, v1.3)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROGS(perlbin,perl)

dnl Checks for libraries.
if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi
LIBDIRS="-L/usr/X11/lib -L/usr/X11R6/lib -L$prefix/lib -L/usr/local/lib"
dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(X11, XBell,,,$LIBDIRS)
AC_CHECK_LIB(Xpm, xpmNextString,,,$LIBDIRS)
AC_CHECK_LIB(forms, fl_initialize,,,$LIBDIRS)
LIBS="$LIBDIRS $LIBS"

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname select strdup)

AC_OUTPUT(Makefile)
